# crawl-a-site

./: .gitignore  Dockerfile.crawlerBackend  Dockerfile.frontendServer  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
nginx/conf/: nginx.conf
web-crawler-front/: package-lock.json  package.json
web-crawler-front/src/: App.css  App.js
