[tool.poetry]
name = "crawl-a-site"
version = "0.1.0"
description = "An open source package for crawling a website."
authors = ["Connor Skelland <34070858+Connor56@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
